--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ nav {
 
 /* Header */
 .about-header {
-  background-image: url('images/bg 1.jpg');
+  background-image: url('bg 1.jpg');
   background-size: cover;
   background-position: center;
   height: 60vh;
@@ -950,4 +950,5 @@ body {
     display: inline-block;
     margin: 0 10px;
   }
+
 }
